--- a/composer.json
+++ b/composer.json
@@ -12,5 +12,10 @@
     "require": {},
     "extra": {
         "installer-name": "CakeManager"
-    }
+    },
+    "autoload": {
+        "psr-4": {
+            "CakeManager\\": "src"
+        }
+    },
 }
