--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         }
     ],
     "require": {
+        "cakemanager/cakephp-utils": "dev-master",
         "friendsofcake/crud": "dev-cake3"
     },
     "extra": {
