--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         }
     ],
     "require": {
-        "cakemanager/cakephp-utils": "dev-master",
+        "cakemanager/cakephp-utils": "dev-master"
     },
     "extra": {
         "installer-name": "CakeManager"
