--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
     ],
     "require": {
         "cakephp/cakephp": "3.0.*-dev",
-        "cakemanager/cakephp-utils": "dev-master"
+        "cakemanager/cakephp-utils": "1.*-dev"
     },
     "extra": {
         "installer-name": "CakeManager"
