--- a/composer.json
+++ b/composer.json
@@ -11,11 +11,11 @@
     ],
     "require": {
         "cakephp/cakephp": "~3.0",
-        "cakemanager/cakephp-utils": "1.0.*@dev",
-        "cakephp/cakephp-codesniffer": "2.*"
+        "cakemanager/cakephp-utils": "1.0.*@dev"
     },
     "require-dev": {
-        "phpunit/phpunit": " 4.6.*@dev"
+        "phpunit/phpunit": " 4.6.*@dev",
+        "cakephp/cakephp-codesniffer": "2.*"
     },
     "extra": {
         "installer-name": "CakeManager"
