--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
     ],
     "require": {
         "cakephp/cakephp": "~3.0",
-        "cakemanager/cakephp-utils": "1.0.*@dev"
+        "cakemanager/cakephp-utils": "1.0.*@dev",
+        "cakemanager/cakephp-posttypes": "~1.0"
     },
     "require-dev": {
         "phpunit/phpunit": " 4.6.*@dev",
